# plan-oplat-web

./: .gitignore  README.md  docker-compose.yml  entities.txt  fields_entities.txt  gemini.md  groups_entities.txt  pyproject.toml  requirements.txt
fastapi-application/core/: config.py
src/: .env.template
