[project]
name = "fastapi-sqlalchemy-webapp-tmplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.5",
    "aiormq>=6.8.1",
    "aiosmtplib>=3.0.2",
    "alembic>=1.16.1",
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "asyncpg>=0.30.0",
    "certifi>=2025.6.15",
    "click>=8.2.1",
    "dnspython>=2.7.0",
    "email-validator>=2.2.0",
    "exceptiongroup>=1.3.0",
    "fast-depends>=3.0.3",
    "fastapi>=0.111.1",
    "fastapi-cli>=0.0.7",
    "faststream>=0.6.2",
    "greenlet>=3.2.3",
    "gunicorn>=23.0.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "idna>=3.10",
    "importlib-metadata>=8.7.0",
    "izulu>=0.50.0",
    "jinja2>=3.1.6",
    "mako>=1.3.10",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "mdurl>=0.1.2",
    "multidict>=6.4.4",
    "nats-py>=2.10.0",
    "orjson>=3.10.18",
    "packaging>=25.0",
    "pamqp>=3.3.0",
    "propcache>=0.3.2",
    "pycron>=3.2.0",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.9.1",
    "pygments>=2.19.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "rich-toolkit>=0.14.7",
    "shellingham>=1.5.4",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.41",
    "starlette>=0.37.2",
    "taskiq>=0.11.17",
    "taskiq-aio-pika>=0.4.2",
    "taskiq-dependencies>=1.5.7",
    "taskiq-fastapi>=0.3.5",
    "typer>=0.19.2",
    "typing-extensions>=4.14.0",
    "typing-inspection>=0.4.1",
    "uvicorn>=0.29.0",
    "uvloop>=0.21.0",
    "watchfiles>=1.0.5",
    "websockets>=15.0.1",
    "yarl>=1.20.1",
    "zipp>=3.23.0",
]
